--- a/ContactStyle.css
+++ b/ContactStyle.css
@@ -50,6 +50,14 @@ form :nth-last-child(2){
     margin-bottom: 15px;
 }
 
+form :first-child{
+    margin-top: 5px;
+}
+
+form :nth-child(2){
+    margin-top: 5px;
+}
+
 input {
     border-color: transparent;
   }
